# Claude-Usage-Meter-for-KDE

./: Claude Usage Meter.desktop  Claude_Usage_Meter2.sh  README.md  pyproject.toml
claude_usage_meter/: __init__.py  __main__.py  app.py  config.py  login.py  models.py  notifier.py  scraper.py  ui.py  worker.py
claude_usage_meter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: install_autostart.py
tests/: test_alert_state.py  test_config.py
